fix sort by status or requested change

Summary:
Sorting was considering less package states than what is shown to the
user. For instance Upgradeable was not taken into account and the
package was sorted just as Installed, that resulted in a list that could
contain Installed, then Upgradeable and then Installed again.

BUG: 382892

Reviewers: sitter

Reviewed By: sitter

Differential Revision: https://phabricator.kde.org/D13417